--- a/email/action.html
+++ b/email/action.html
@@ -115,7 +115,7 @@ table[class=body] .article {
               <tr>
                 <td class="content-block" align="center" style="-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-family: sans-serif; font-size: 16px; vertical-align: top; padding-bottom: 10px; padding-top: 10px;" valign="top">
                   <a href="https://owlege.com" style="-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; color: #f7941e; text-decoration: underline;">
-                    <img src="https://cdn.jsdelivr.net/gh/bozdev/cdn.owlege@master/req/owlege-logo.svg" width="300" height="102" border="0" class="img" alt="Owlege" style="width: auto; max-width: 100%; display: block; -ms-interpolation-mode: bicubic; border: 0; outline: none; text-decoration: none;">
+                    <img src="https://cdn.jsdelivr.net/gh/pealm/cdn.owlege@master/req/owlege-logo.svg" width="300" height="102" border="0" class="img" alt="Owlege" style="width: auto; max-width: 100%; display: block; -ms-interpolation-mode: bicubic; border: 0; outline: none; text-decoration: none;">
                   </a>
                 </td>
               </tr>
