--- a/email/success.html
+++ b/email/success.html
@@ -115,7 +115,7 @@ table[class=body] .article {
               <tr>
                 <td class="content-block" align="center" style="-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-family: sans-serif; font-size: 16px; vertical-align: top; padding-bottom: 10px; padding-top: 10px;" valign="top">
                   <a href="https://owlege.com" style="-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; color: #f7941e; text-decoration: underline;">
-                    <img src="https://cdn.jsdelivr.net/gh/bozdev/cdn.owlege@master/req/owlege-logo.svg" width="300" height="102" border="0" class="img" alt="Owlege" style="width: auto; max-width: 100%; display: block; -ms-interpolation-mode: bicubic; border: 0; outline: none; text-decoration: none;">
+                    <img src="https://cdn.jsdelivr.net/gh/pealm/cdn.owlege@master/req/owlege-logo.svg" width="300" height="102" border="0" class="img" alt="Owlege" style="width: auto; max-width: 100%; display: block; -ms-interpolation-mode: bicubic; border: 0; outline: none; text-decoration: none;">
                   </a>
                 </td>
               </tr>
@@ -135,7 +135,7 @@ table[class=body] .article {
                     <td style="-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-family: sans-serif; font-size: 16px; vertical-align: top;" valign="top">
                       <h3 style="color: #000000; font-family: sans-serif; font-weight: 400; line-height: 1.5; margin: 0; margin-bottom: 16px;"><strong>You got new session successfully</strong></h3>
                       <hr style="border: 0; border-bottom: 1px solid #e2e3e7; margin: 20px 0;">
-                      <img src="https://cdn.jsdelivr.net/gh/bozdev/cdn.owlege@master/img/payment-successful.svg" border="0" class="img" alt="Success" style="width: auto; max-width: 100%; display: block; -ms-interpolation-mode: bicubic; border: 0; outline: none; text-decoration: none;">
+                      <img src="https://cdn.jsdelivr.net/gh/pealm/cdn.owlege@master/img/payment-successful.svg" border="0" class="img" alt="Success" style="width: auto; max-width: 100%; display: block; -ms-interpolation-mode: bicubic; border: 0; outline: none; text-decoration: none;">
                       <hr class="light" style="border: 0; border-bottom: 1px solid #e2e3e7; margin: 20px 0; border-bottom-color: #f4f3f7;">
                     </td>
                   </tr> 
